src/test/deca/syntax/valid/else-if.deca
{
	if(false) {
		println("hello");
	} else if(false) {
			println("bye");
	} else if(true) {
		println("NOOOO");
	} else if(false) {
		println("VVUUUIII");
	} else {
		println("FFFIIINN");
    }
}

