src/test/deca/syntax/invalid/if-wrong-order.deca
{
    if(true) {} else {} else if(false) {}
}
